# ToyPlayer

./: CMakeLists.txt
inc/base/: DB.hpp  PlayerDB.hpp  VideoWidget.hpp
inc/ui/: ListContextMenu.hpp  ListSelectDialog.hpp  MediaListDialog.hpp  VideoDock.hpp  mainwindow.hpp
src/base/: DB.cpp  PlayerDB.cpp  VideoWidget.cpp
src/ui/: ListContextMenu.cpp  ListSelectDialog.cpp  ListSelectDialog.ui  MediaListDialog.cpp  MediaListDialog.ui  VideoDock.cpp  VideoDock.ui  mainwindow.cpp  mainwindow.ui
